Updated font and main page

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css" charset="utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <script src="javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.previewable_comment_form.js" type="text/javascript"></script>
@@ -38,53 +37,16 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="index.html"><div id="header">&nbsp;
+            <a href="index.html"><div id="header">
+            <p class="text-center">VERTICAL PROGRESS</p>
             </div></a>
-            <hr />
-            <h4 class="text-center">VERTICAL PROGRESS</h4>
-            <hr />
         </div>
         <div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns icon">&nbsp;</div>
-        <div class="two columns icon"><a href="Secrets-Of-Raetikon.html"><img src="img/portfolio/works-0.png"/><br/>Secrets of Raetikon</a></div>
-        <div class="two columns icon"><a href="Chasing-Aurora.html"><img src="img/portfolio/works-1.png"/><br/>Chasing Aurora</a></div>
-        <div class="two columns icon"><a href="Yet-It-Moves.html"><img src="img/portfolio/works-2.png"/><br/>Yet It Moves</a></div>
-        <div class="two columns icon"><a href="Radio-Flare.html"><img src="img/portfolio/works-3.png"/><br/>Radio Flare</a></div>
-        <div class="two columns icon">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns icon">&nbsp;</div>
-        <div class="two columns icon"><a href="Radio-Flare-REDUX.html"><img src="img/portfolio/works-4.png"/><br/>Radio Flare REDUX</a></div>
-        <div class="two columns icon"><a href="Zombies-vs-Sheep.html"><img src="img/portfolio/works-5.png"/><br/>Zombies vs. Sheep</a></div>
-        <div class="two columns icon"><a href="Bagatelle-Concrete.html"><img src="img/portfolio/works-6.png"/><br/>Bagatelle Concrete</a></div>
-        <div class="two columns icon"><a href="Approximating-a-Steam-Engine.html"><img src="img/portfolio/works-7.png"/><br/>Approximating a Steam Engine</a></div>
-        <div class="two columns icon">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns icon">&nbsp;</div>
-        <div class="two columns icon"><a href="BLCK.html"><img src="img/portfolio/works-8.png"/><br/>BLCK</a></div>
-        <div class="two columns icon"><a href="HPST.html"><img src="img/portfolio/works-9.png"/><br/>HPST</a></div>
-        <div class="two columns icon"><a href="Broken-Rules.html"><img src="img/portfolio/works-12.png"/><br/>Broken Rules</a></div>
-        <div class="two columns icon">&nbsp;</div>
-        <div class="two columns icon">&nbsp;</div>
       </div>
 
-<!--       <div class="row">
+     <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <hr />
-            <h4 class="text-center">MARTIN PICHLMAIR</h4>
-            <hr />
-        </div>
-        <div class="two columns">&nbsp;</div>
-      </div>
- -->
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns">
-            <hr />
             <a href="Me.html"><img src="img/me.jpg" /></a>
         </div>
         <div class="two columns">&nbsp;</div>
@@ -92,7 +54,7 @@
 
       <div class="row">
         <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>Hi, I'm <a href="Me.html">Martin Pichlmair</a>, <a href="http://brokenrul.es">game designer</a> and <a href="http://game.itu.dk/index.php/About">academic</a>. <a href="Works.html">Here</a> is the stuff I made – from <a href="Seven-Mile-Boots.html">talking boots</a> and <a href="Chasing-Aurora.html">Wii U launch titles</a> to <a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">papers</a> and <a href="BLCK.html">photography apps</a>! Contact me via <a href="http://twitter.com/martinpi">Twitter</a> or 
+        <div class="eight columns"><p>Hi, I'm <a href="Me.html">Martin Pichlmair</a>, <a href="http://brokenrul.es">game designer</a> and <a href="http://game.itu.dk/index.php/About">academic</a>. <a href="Works.html">Here are</a> a couple of projects I realized, from <a href="Seven-Mile-Boots.html">talking boots</a> and <a href="Chasing-Aurora.html">Wii U launch titles</a> to <a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">papers</a> and <a href="BLCK.html">photography apps</a>! Contact me via <a href="http://twitter.com/martinpi">Twitter</a> or 
 
 <script language="JavaScript"><!-- 
 dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB="&#112;&#105;"
@@ -102,6 +64,100 @@ uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU="&#115;&#101;&#110;&#100; &#109;&#101;&#32;&#9
 mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI="&#115;&#101;&#110;d&#32;&#109;&#101; &#97;&#32;&#109;a&#105;&#108;"
 document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+Et+"' title='"+mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI+"'>"+uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU+"<\/a>")
 // --></script>.</p>
+      
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns">
+          <br/><br/>
+            <h2>Works</h2>
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="BLCK.html">
+          <img src="img/banners/blck-banner.jpg"/><h5><span>BLCK</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="HPST.html">
+          <img src="img/banners/hpst-banner.jpg"/><h5><span>HPST</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Secrets-Of-Raetikon.html">
+          <img src="img/banners/raetikon-banner.png"/><h5><span>Secrets of Raetikon</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Chasing-Aurora.html">
+          <img src="img/banners/chasingaurora-banner.png"/><h5><span>Chasing Aurora</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Yet-It-Moves.html">
+          <img src="img/banners/yetitmoves-banner.png"/><h5><span>Yet It Moves</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Radio-Flare.html">
+          <img src="img/banners/radioflare-banner.jpg"/><h5><span>Radio Flare</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Radio-Flare-REDUX.html">
+          <img src="img/banners/redux-banner.jpg"/><h5><span>Radio Flare REDUX</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Bagatelle-Concrete.html">
+          <img src="img/banners/bagatelle-banner.jpg"/><h5><span>Bagatelle Concrete</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns bgimage">
+          <a href="Approximating-a-Steam-Engine.html">
+          <img src="img/banners/steam-engine-banner.jpg"/><h5><span>Approximating a Steam Engine</span></h5>
+          </a>
+        </div><div class="two columns">&nbsp;</div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns">
+
+            <h2>More</h2>
 
         <div class="table">
           <div class="tablerow">
