--- a/Approximating-a-Steam-Engine.html
+++ b/Approximating-a-Steam-Engine.html
@@ -12,9 +12,7 @@
     <link rel="stylesheet" href="/css/normalize.css">
     <link rel="stylesheet" href="/css/skeleton.css">
     <link rel="stylesheet" href="/css/custom.css" type="text/css" charset="utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Dosis:400,300,600' rel='stylesheet' type='text/css'>
-    <!-- <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,600' rel="stylesheet" type="text/css"> -->
+    <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <script src="/javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="/javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
     <script src="/javascript/jquery.previewable_comment_form.js" type="text/javascript"></script>
@@ -40,11 +38,9 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="/index.html"><div id="header">&nbsp;
-            </div></a>
-            <hr />
+            <a href="/index.html"><div id="header">
             <h4>Approximating a Steam Engine</h4>
-            <hr />
+            </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
