Changed header for subpages

--- a/Assembling-a-Mosaic-of-the-Future-The-Post-Nuclear-World-of-Fallout-3.html
+++ b/Assembling-a-Mosaic-of-the-Future-The-Post-Nuclear-World-of-Fallout-3.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</h4>
+            <p class="text-center">Assembling a Mosaic of the Future The Post Nuclear World of Fallout 3</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
