--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
 
-            <h2>More</h2>
+            <h2>Connect</h2>
 
         <div class="table">
           <div class="tablerow">
