--- a/Approximating-a-Steam-Engine.html
+++ b/Approximating-a-Steam-Engine.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Approximating a Steam Engine</h4>
+            <p class="text-center">Approximating a Steam Engine</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
