--- a/Bagatelle-Concrete.html
+++ b/Bagatelle-Concrete.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Bagatelle Concrete</h4>
+            <p class="text-center">Bagatelle Concrete</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
