--- a/Broken-Rules.html
+++ b/Broken-Rules.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Broken Rules</h4>
+            <p class="text-center">Broken Rules</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
