--- a/Cuneiformer.html
+++ b/Cuneiformer.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Cuneiformer</h4>
+            <p class="text-center">Cuneiformer</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
