--- a/Democracy-3-Clones-And-Drones.html
+++ b/Democracy-3-Clones-And-Drones.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Democracy 3 Clones And Drones</h4>
+            <p class="text-center">Democracy 3 Clones And Drones</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
