--- a/Electroplankton-revisited.html
+++ b/Electroplankton-revisited.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Electroplankton revisited</h4>
+            <p class="text-center">Electroplankton revisited</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
