--- a/Grand-Theft-Auto-IV-Considered-as-an-Atrocity-Exhibition.html
+++ b/Grand-Theft-Auto-IV-Considered-as-an-Atrocity-Exhibition.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Grand Theft Auto IV Considered as an Atrocity Exhibition</h4>
+            <p class="text-center">Grand Theft Auto IV Considered as an Atrocity Exhibition</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
