--- a/HPST.html
+++ b/HPST.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>HPST</h4>
+            <p class="text-center">HPST</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
