--- a/Intentions,-Expectations-and-the-Player.html
+++ b/Intentions,-Expectations-and-the-Player.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Intentions, Expectations and the Player</h4>
+            <p class="text-center">Intentions, Expectations and the Player</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
