--- a/Levels-of-Sound.html
+++ b/Levels-of-Sound.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Levels of Sound</h4>
+            <p class="text-center">Levels of Sound</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
