--- a/Me.html
+++ b/Me.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Me</h4>
+            <p class="text-center">Me</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
