--- a/Playing-Music-and-Playing-Games.html
+++ b/Playing-Music-and-Playing-Games.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Playing Music and Playing Games</h4>
+            <p class="text-center">Playing Music and Playing Games</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
