--- a/Pwned-10-Tales-of-Appropriation-in-Video-Games.html
+++ b/Pwned-10-Tales-of-Appropriation-in-Video-Games.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Pwned 10 Tales of Appropriation in Video Games</h4>
+            <p class="text-center">Pwned 10 Tales of Appropriation in Video Games</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
