--- a/Radio-Flare-REDUX.html
+++ b/Radio-Flare-REDUX.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Radio Flare REDUX</h4>
+            <p class="text-center">Radio Flare REDUX</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
