--- a/Studio-Radiolaris.html
+++ b/Studio-Radiolaris.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Studio Radiolaris</h4>
+            <p class="text-center">Studio Radiolaris</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
