--- a/The-Danish-Mountains.html
+++ b/The-Danish-Mountains.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>The Danish Mountains</h4>
+            <p class="text-center">The Danish Mountains</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
