--- a/Todo.html
+++ b/Todo.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Todo</h4>
+            <p class="text-center">Todo</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
