--- a/Unitilities.html
+++ b/Unitilities.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Unitilities</h4>
+            <p class="text-center">Unitilities</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
