--- a/Venturing-Into-The-Borderlands-Of-Playfulness.html
+++ b/Venturing-Into-The-Borderlands-Of-Playfulness.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Venturing Into The Borderlands Of Playfulness</h4>
+            <p class="text-center">Venturing Into The Borderlands Of Playfulness</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
