--- a/Yet-It-Moves.html
+++ b/Yet-It-Moves.html
@@ -39,7 +39,7 @@
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
             <a href="/index.html"><div id="header">
-            <h4>Yet It Moves</h4>
+            <p class="text-center">Yet It Moves</p>
             </div></a>
         </div>
         <div class="two columns">&nbsp;</div>
