Index & font update

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/font-awesome.css" type="text/css" charset="utf-8" />
     <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
     <script src="javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
@@ -162,11 +163,11 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
         <div class="table">
           <div class="tablerow">
             <div class="tablecell left">Twitter</div>
-            <div class="tablecell right"><a href="http://twitter.com/martinpi">@martinpi</a></div>
+            <div class="tablecell right"><i class="fa fa-twitter fa-fw"></i><a href="http://twitter.com/martinpi">@martinpi</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">e-Mail</div>
-            <div class="tablecell right"><script language="JavaScript"><!-- 
+            <div class="tablecell right"><i class="fa fa-envelope fa-fw"></i><script language="JavaScript"><!-- 
 dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB="&#112;&#105;"
 gN="&#64;"
 Et="&#98;&#114;&#111;&#107;e&#110;&#114;&#117;&#108;.&#101;&#115;"
@@ -177,47 +178,47 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
           </div>
           <div class="tablerow">
             <div class="tablecell left">Web</div>
-            <div class="tablecell right"><a href="http://vertical-progress.net">VERTICAL PROGRESS</a></div>
+            <div class="tablecell right"><i class="fa fa-globe fa-fw"></i><a href="http://vertical-progress.net">VERTICAL PROGRESS</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Gamasutra</div>
-            <div class="tablecell right"><a href="http://www.gamasutra.com/blogs/author/MartinPichlmair/518839/">Tech Blog</a></div>
+            <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://www.gamasutra.com/blogs/author/MartinPichlmair/518839/">Tech Blog</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Tumblr</div>
-            <div class="tablecell right"><a href="http://futurumexactum.tumblr.com">Futurum Exactum</a></div>
+            <div class="tablecell right"><i class="fa fa-tumblr fa-fw"></i><a href="http://futurumexactum.tumblr.com">Futurum Exactum</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">GitHub</div>
-            <div class="tablecell right"><a href="http://github.com/martinpi/">Code Repository</a></div>
+            <div class="tablecell right"><i class="fa fa-git fa-fw"></i><a href="http://github.com/martinpi/">Code Repository</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">itch.io</div>
-            <div class="tablecell right"><a href="http://martinpi.itch.io">Jams &amp; Experiments</a></div>
+            <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://martinpi.itch.io">Jams &amp; Experiments</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Facebook</div>
-            <div class="tablecell right"><a href="http://facebook.com/martin.pichlmair">Public Profile</a></div>
+            <div class="tablecell right"><i class="fa fa-facebook-square fa-fw"></i><a href="http://facebook.com/martin.pichlmair">Public Profile</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">IMDB</div>
-            <div class="tablecell right"><a href="http://www.imdb.com/name/nm6101397/?ref_=fn_al_nm_1">Profile</a></div>
+            <div class="tablecell right"><i class="fa fa-film fa-fw"></i><a href="http://www.imdb.com/name/nm6101397/?ref_=fn_al_nm_1">Profile</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Vine</div>
-            <div class="tablecell right"><a href="https://vine.co/martinpi">Video Feed</a></div>
+            <div class="tablecell right"><i class="fa fa-file-movie-o fa-fw"></i><a href="https://vine.co/martinpi">Video Feed</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Academia.edu</div>
-            <div class="tablecell right"><a href="https://itu.academia.edu/pi">Research Base</a></div>
+            <div class="tablecell right"><i class="fa fa-align-justify fa-fw"></i><a href="https://itu.academia.edu/pi">Research Base</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">About.me</div>
-            <div class="tablecell right"><a href="http://about.me/martin.pichlmair">Profile</a></div>
+            <div class="tablecell right"><i class="fa fa-user fa-fw"></i><a href="http://about.me/martin.pichlmair">Profile</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">LinkedIn</div>
-            <div class="tablecell right"><a href="https://www.linkedin.com/profile/view?id=6327100">Profile</a></div>
+            <div class="tablecell right"><i class="fa fa-linkedin fa-fw"></i><a href="https://www.linkedin.com/profile/view?id=6327100">Profile</a></div>
           </div>
         </div>
 
@@ -239,6 +240,10 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
           <div class="tablerow">
             <div class="tablecell left">Central European Games Conference</div>
             <div class="tablecell right"><a href="http://www.cegconf.com">Advisory Board</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">Copenhagen Game Collective</div>
+            <div class="tablecell right"><a href="http://www.copenhagengamecollective.org">Contributor</a></div>
           </div>
         </div>
 
