--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="css/font-awesome.css" type="text/css" charset="utf-8" />
-    <link href='https://fonts.googleapis.com/css?family=Oswald:300' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Crimson+Text" rel="stylesheet">
     <script src="javascript/jquery-1.4.2.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.text_selection-1.0.0.min.js" type="text/javascript"></script>
     <script src="javascript/jquery.previewable_comment_form.js" type="text/javascript"></script>
@@ -38,127 +38,26 @@
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="eight columns">
-            <a href="index.html"><div id="header">
-            <p class="text-center">VERTICAL PROGRESS</p>
-            </div></a>
-        </div>
-        <div class="two columns">&nbsp;</div>
-      </div>
+            <a href="index.html" class="no-underline">
+              <div id="header">
+                <h1 class="text-center">VERTICAL PROGRESS</h1>
+              </div>
+            </a>
 
-     <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns">
             <a href="Me.html"><img src="img/me.jpg" /></a>
-        </div>
-        <div class="two columns">&nbsp;</div>
-      </div>
 
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns"><p>Hi, I'm <a href="Me.html">Martin Pichlmair</a>, <a href="http://brokenrul.es">game designer</a> and <a href="http://game.itu.dk/index.php/About">academic</a>. <a href="Works.html">Here are</a> a couple of projects I realized, from <a href="Seven-Mile-Boots.html">talking boots</a> and <a href="Chasing-Aurora.html">Wii U launch titles</a> to <a href="Venturing-Into-The-Borderlands-Of-Playfulness.html">papers</a> and <a href="BLCK.html">photography apps</a>! Contact me via <a href="http://twitter.com/martinpi">Twitter</a> or 
+            <p>
 
-<script language="JavaScript"><!-- 
-dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB="&#112;&#105;"
-gN="&#64;"
-Et="&#98;&#114;&#111;&#107;e&#110;&#114;&#117;&#108;.&#101;&#115;"
-uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU="&#115;&#101;&#110;&#100; &#109;&#101;&#32;&#97; &#109;&#97;&#105;&#108;"
-mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI="&#115;&#101;&#110;d&#32;&#109;&#101; &#97;&#32;&#109;a&#105;&#108;"
-document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+Et+"' title='"+mToeyJbcvWPlWIcTlaUvATQteWiSeWNaI+"'>"+uCMeEHaipvbToSMnVelHuQPYUCaMcOzhU+"<\/a>")
-// --></script>.</p>
+Hi there. I am Martin Pichlmair, Associate Professor and Head of the <a href="https://www.itu.dk/uddannelser/kandidatuddannelser/spil">Games Programme</a> at <a href="https://www.itu.dk">IT University Copenhagen</a>. I am also one out of five co-founders of award winning boutique game studio <a href="http://brokenrul.es">Broken Rules</a> and a member of the <a href="http://copenhagengamecollective.org">Copenhagen Game Collective</a>. I <a href="https://game.itu.dk">research</a> game design, create tools and processes for game design and development, and regularly cook up fresh prototypes. And I love dangerously hot food.
+
+        </p>
       
-        </div>
-        <div class="two columns">&nbsp;</div>
-      </div>
+        <p>
+What can I do for you? I regularly speak at industry and academic conferences, I consult in game design for indie games as well as playful design/gamification projects.
+        </p>
 
 
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns">
-          <br/><br/>
-            <h2>Works</h2>
-        </div>
-        <div class="two columns">&nbsp;</div>
-      </div>
-
-
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="BLCK.html">
-          <img src="img/banners/blck-banner.jpg"/><h5><span>BLCK</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="HPST.html">
-          <img src="img/banners/hpst-banner.jpg"/><h5><span>HPST</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Secrets-Of-Raetikon.html">
-          <img src="img/banners/raetikon-banner.png"/><h5><span>Secrets of Raetikon</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Chasing-Aurora.html">
-          <img src="img/banners/chasingaurora-banner.png"/><h5><span>Chasing Aurora</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Yet-It-Moves.html">
-          <img src="img/banners/yetitmoves-banner.png"/><h5><span>Yet It Moves</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Radio-Flare.html">
-          <img src="img/banners/radioflare-banner.jpg"/><h5><span>Radio Flare</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Radio-Flare-REDUX.html">
-          <img src="img/banners/redux-banner.jpg"/><h5><span>Radio Flare REDUX</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Bagatelle-Concrete.html">
-          <img src="img/banners/bagatelle-banner.jpg"/><h5><span>Bagatelle Concrete</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns bgimage">
-          <a href="Approximating-a-Steam-Engine.html">
-          <img src="img/banners/steam-engine-banner.jpg"/><h5><span>Approximating a Steam Engine</span></h5>
-          </a>
-        </div><div class="two columns">&nbsp;</div>
-      </div>
-
-      <div class="row">
-        <div class="two columns">&nbsp;</div>
-        <div class="eight columns">
-
-            <h2>Connect</h2>
+        <h2 class="text-center">Connect</h2>
 
         <div class="table">
           <div class="tablerow">
@@ -185,6 +84,10 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://www.gamasutra.com/blogs/author/MartinPichlmair/518839/">Tech Blog</a></div>
           </div>
           <div class="tablerow">
+            <div class="tablecell left">LinkedIn</div>
+            <div class="tablecell right"><i class="fa fa-linkedin fa-fw"></i><a href="https://www.linkedin.com/profile/view?id=6327100">Profile</a></div>
+          </div>
+          <div class="tablerow">
             <div class="tablecell left">Tumblr</div>
             <div class="tablecell right"><i class="fa fa-tumblr fa-fw"></i><a href="http://futurumexactum.tumblr.com">Futurum Exactum</a></div>
           </div>
@@ -205,10 +108,6 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell right"><i class="fa fa-film fa-fw"></i><a href="http://www.imdb.com/name/nm6101397/?ref_=fn_al_nm_1">Profile</a></div>
           </div>
           <div class="tablerow">
-            <div class="tablecell left">Vine</div>
-            <div class="tablecell right"><i class="fa fa-file-movie-o fa-fw"></i><a href="https://vine.co/martinpi">Video Feed</a></div>
-          </div>
-          <div class="tablerow">
             <div class="tablecell left">Academia.edu</div>
             <div class="tablecell right"><i class="fa fa-align-justify fa-fw"></i><a href="https://itu.academia.edu/pi">Research Base</a></div>
           </div>
@@ -216,13 +115,9 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell left">About.me</div>
             <div class="tablecell right"><i class="fa fa-user fa-fw"></i><a href="http://about.me/martin.pichlmair">Profile</a></div>
           </div>
-          <div class="tablerow">
-            <div class="tablecell left">LinkedIn</div>
-            <div class="tablecell right"><i class="fa fa-linkedin fa-fw"></i><a href="https://www.linkedin.com/profile/view?id=6327100">Profile</a></div>
-          </div>
         </div>
 
-        <hr />
+            <h2 class="text-center">Continue</h2>
 
         <div class="table">
           <div class="tablerow">
@@ -234,16 +129,12 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell right"><a href="http://brokenrul.es">Co-Founder</a></div>
           </div>
           <div class="tablerow">
-            <div class="tablecell left">Games Austria</div>
-            <div class="tablecell right"><a href="http://gamesaustria.com">Advisory Board</a></div>
-          </div>
-          <div class="tablerow">
-            <div class="tablecell left">Central European Games Conference</div>
-            <div class="tablecell right"><a href="http://www.cegconf.com">Advisory Board</a></div>
-          </div>
-          <div class="tablerow">
             <div class="tablecell left">Copenhagen Game Collective</div>
             <div class="tablecell right"><a href="http://www.copenhagengamecollective.org">Contributor</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">IndieCade Europe</div>
+            <div class="tablecell right"><a href="http://indiecade.com">Program Chair</a></div>
           </div>
         </div>
 
