- added current stuff

--- a/index.html
+++ b/index.html
@@ -53,10 +53,65 @@ Hi there. I am Martin Pichlmair, Associate Professor and Head of the <a href="ht
         </p>
       
         <p>
-What can I do for you? I regularly speak at industry and academic conferences, I consult in game design for indie games as well as playful design/gamification projects.
+What do I do? I teach game production and desigbn. I regularly speak at industry and academic conferences. I consult in game design for indie games. I maintain a couple of public repositories for juicy source code.
         </p>
 
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
 
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns">
+        <h2 class="text-center">Recent Talks, Projects & Papers</h2>
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="four columns">
+          <a href="https://www.slideshare.net/martinpi/apocalypse-kitsch"><img src="img/talks/apocalypse-kitsch.png" width="120px"></a>
+        </div>
+        <div class="four columns">
+          <a href="https://www.slideshare.net/martinpi/apocalypse-kitsch">Apocalypse Kitsch</a> – A critique of the romanticisation of the apocalypse as found in popular video games. <br/>
+          <br/>
+          Alserkal Venue, Dubai, VAE, August 24th, 2019
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="four columns">
+          <a href="https://www.slideshare.net/martinpi/shibboleth-scripting-domain-specific-languages-in-games"><img src="img/talks/shibboleth-scripting.png" width="120px"></a>
+        </div>
+        <div class="four columns">
+          <a href="https://www.slideshare.net/martinpi/shibboleth-scripting-domain-specific-languages-in-games">Shibboleth Scripting</a> – A tour-de-force through examples of domain-specific languages for games.<br/>
+          <br/>
+          Unity, Copenhagen, Denmark, August 27, 2019
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="four columns">
+          <a href="http://ieee-cog.org/papers/paper_209.pdf"><img src="img/papers/unity-vgdl.png" width="120px"></a>
+        </div>
+        <div class="four columns">
+          <a href="http://ieee-cog.org/papers/paper_209.pdf">Video Game Description Language Environment for Unity Machine Learning Agents.</a><br/>
+          <br/>
+          With Mads Johansen and Sebastian Risi.<br />
+          IEEE CoG, London, UK, August 20-23, 2019
+        </div>
+        <div class="two columns">&nbsp;</div>
+      </div>
+
+
+      <div class="row">
+        <div class="two columns">&nbsp;</div>
+        <div class="eight columns">
         <h2 class="text-center">Connect</h2>
 
         <div class="table">
@@ -80,8 +135,20 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
             <div class="tablecell right"><i class="fa fa-globe fa-fw"></i><a href="http://vertical-progress.net">VERTICAL PROGRESS</a></div>
           </div>
           <div class="tablerow">
+            <div class="tablecell left">itch.io</div>
+            <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://martinpi.itch.io">Jams &amp; Experiments</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">GitHub</div>
+            <div class="tablecell right"><i class="fa fa-git fa-fw"></i><a href="http://github.com/martinpi/">Code Repository</a></div>
+          </div>
+          <div class="tablerow">
             <div class="tablecell left">Gamasutra</div>
             <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://www.gamasutra.com/blogs/author/MartinPichlmair/518839/">Tech Blog</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">SlideShare</div>
+            <div class="tablecell right"><i class="fa fa-film fa-fw"></i><a href="https://www.slideshare.net/martinpi">Slides</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">LinkedIn</div>
@@ -90,14 +157,6 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
           <div class="tablerow">
             <div class="tablecell left">Tumblr</div>
             <div class="tablecell right"><i class="fa fa-tumblr fa-fw"></i><a href="http://futurumexactum.tumblr.com">Futurum Exactum</a></div>
-          </div>
-          <div class="tablerow">
-            <div class="tablecell left">GitHub</div>
-            <div class="tablecell right"><i class="fa fa-git fa-fw"></i><a href="http://github.com/martinpi/">Code Repository</a></div>
-          </div>
-          <div class="tablerow">
-            <div class="tablecell left">itch.io</div>
-            <div class="tablecell right"><i class="fa fa-gamepad fa-fw"></i><a href="http://martinpi.itch.io">Jams &amp; Experiments</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Facebook</div>
