--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
             <a href="Me.html"><img src="img/me.jpg" /></a>
 
             <p>
-
-Hi there. I am Martin Pichlmair, and I make playful things. Sometimes those are <a href="https://www.playvitriol.com">games</a>, sometimes they are <a href="https://martinpi.itch.io/ephemerald">tools</a>, and sometimes they are <a href="https://alphachar.itch.io/tiphareth">weird experiments</a>.
-            </p>
-            <p>
-I work as an Associate Professor and Head of the <a href="https://www.itu.dk/uddannelser/kandidatuddannelser/spil">Games Programme</a> at <a href="https://www.itu.dk">IT University Copenhagen</a>. I am also one out of five co-founders of award winning boutique game studio <a href="http://brokenrul.es">Broken Rules</a> and a member of the <a href="http://copenhagengamecollective.org">Copenhagen Game Collective</a>. I <a href="https://game.itu.dk">research</a> game design, create tools and processes for game design and development – currently mostly based on machine learning, and regularly cook up fresh prototypes. And I love dangerously hot food.
+Hi there. I am Martin Pichlmair, and I work with the playful side of technology. Currently I'm most interested in Creative AI and setting up a startup in the AI writing space called <a href="https://www.writewithlaika.com">Write with LAIKA</a>.
+  </p><p>
+Interactive toys I've created are sometimes <a href="https://www.playvitriol.com">games</a>, often take the shape of <a href="https://martinpi.itch.io/ephemerald">tools</a>, and other times turn out to be <a href="https://alphachar.itch.io/tiphareth">weird experiments</a>.
+  </p><p>
+I work as an Associate Professor and Co-Head of the <a href="https://www.itu.dk/uddannelser/kandidatuddannelser/spil">Games Programme</a> at <a href="https://www.itu.dk">IT University Copenhagen</a>. I am also one out of five co-founders of award winning boutique game studio <a href="http://brokenrul.es">Broken Rules</a> and a member of the <a href="http://copenhagengamecollective.org">Copenhagen Game Collective</a>. 
+  </p><p>
+I love dangerously hot food.
         </p>
 
         </div>
@@ -52,11 +54,11 @@ I work as an Associate Professor and Head of the <a href="https://www.itu.dk/udd
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="four columns">
-          <a href="https://arxiv.org/abs/2011.09201"><img src="img/papers/GameFeel.png" width="120px"></a>
+          <a href="https://www.youtube.com/watch?v=O2PX2EsE6lk&t=2420s"><img src="img/talks/creative-ai-ars.png" width="120px"></a>
         </div>
         <div class="four columns">
-          <a href="https://arxiv.org/abs/2011.09201">Game Feel. A Survey.</a> – Game feel design is the intentional design of the affective impact of moment-to-moment interaction.<br/>
-          – To be published in <a href="https://transactions.games">Transactions on Games</a>.
+          <a href="https://www.youtube.com/watch?v=O2PX2EsE6lk&t=2420s">Creative Challenges in Artificial Intelligence.</a> – On our journey to new forms of creative expression, we will encounter ethical challenges and cross some legal minefields, to arrive at new perspectives on creativity.<br/>
+          – Presented at <a href="https://expandedanimation.com">Ars Electronica, Expanded Animation Symposium</a>.
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
@@ -64,11 +66,11 @@ I work as an Associate Professor and Head of the <a href="https://www.itu.dk/udd
       <div class="row">
         <div class="two columns">&nbsp;</div>
         <div class="four columns">
-          <a href="https://www.slideshare.net/martinpi/apocalypse-kitsch"><img src="img/talks/apocalypse-kitsch.png" width="120px"></a>
+          <a href="https://arxiv.org/abs/2011.09201"><img src="img/papers/GameFeel.png" width="120px"></a>
         </div>
         <div class="four columns">
-          <a href="https://www.slideshare.net/martinpi/apocalypse-kitsch">Apocalypse Kitsch</a> – A critique of the romanticisation of the apocalypse as found in popular video games. <br/>
-          — Presented at: Alserkal Venue, Dubai, VAE, August 24th, 2019
+          <a href="https://arxiv.org/abs/2011.09201">Game Feel. A Survey.</a> – Game feel design is the intentional design of the affective impact of moment-to-moment interaction.<br/>
+          – Published in <a href="https://transactions.games">Transactions on Games</a>.
         </div>
         <div class="two columns">&nbsp;</div>
       </div>
@@ -153,24 +155,20 @@ document.write("<a href='mailto:"+dFlRdSVxzhzxylBFJyIrTgYErtktPjxyRVjB+""+gN+""+
           </div>
         </div>
 
-            <h2 class="text-center">Continue</h2>
+            <h2 class="text-center">Collaborate</h2>
 
         <div class="table">
           <div class="tablerow">
-            <div class="tablecell left">ITU Center for Computer Games Research</div>
-            <div class="tablecell right"><a href="http://game.itu.dk">Faculty Member</a></div>
+            <div class="tablecell left">Write with LAIKA</div>
+            <div class="tablecell right"><a href="https://www.writewithlaika.com">Founder & CEO (soon)</a></div>
+          </div>
+          <div class="tablerow">
+            <div class="tablecell left">ITU Center for Digital Play</div>
+            <div class="tablecell right"><a href="https://pure.itu.dk/portal/en/organisations/center-for-digital-play">Faculty Member</a></div>
           </div>
           <div class="tablerow">
             <div class="tablecell left">Broken Rules</div>
             <div class="tablecell right"><a href="http://brokenrul.es">Co-Founder</a></div>
-          </div>
-          <div class="tablerow">
-            <div class="tablecell left">Copenhagen Game Collective</div>
-            <div class="tablecell right"><a href="http://www.copenhagengamecollective.org">Contributor</a></div>
-          </div>
-          <div class="tablerow">
-            <div class="tablecell left">IndieCade Europe</div>
-            <div class="tablecell right"><a href="http://indiecade.com">Program Chair</a></div>
           </div>
         </div>
 
